// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the dom like the snapshot when the currentForm is activAttr. 1`] = `
<div>
  <div
    className="page-wrapper"
  >
    <header
      className="site-header"
      id="header"
    >
      <h1
        className="logo"
      >
        <a
          href="homePage.do"
        >
          <img
            alt="login screen primary logo"
            src="assets/skins/undefined/img/logo-primary.png"
          />
        </a>
      </h1>
    </header>
    <section
      id="contents"
    >
      <div
        className="container"
      >
        <div
          className="page-content page"
          id="loginPage"
          style={
            Object {
              "visibility": "visible",
            }
          }
        >
          <div
            className="narrow-form-page login"
          >
            <form
              action={undefined}
              className="narrow-form"
              method="post"
            >
              <p>
                <a
                  onClick={[Function]}
                  tabIndex="9"
                >
                  <span>
                    <i
                      className="icon-arrow-1-circle-left"
                    />
                     
                  </span>
                </a>
              </p>
              <h3 />
              <p />
              <div
                className="email-field input-wrap focused activation"
              >
                <div
                  className="activation-field-desc"
                >
                  <div>
                    Enter your corporate email address
                  </div>
                  <label
                    className="control-label"
                    htmlFor="formUserId5005"
                  >
                    Email Address
                  </label>
                  <input
                    autoFocus={true}
                    className="gq-input"
                    id="formUserId5005"
                    name="Email Address"
                    onChange={[Function]}
                    onKeyPress={[Function]}
                    tabIndex={1}
                    type="text"
                    value={undefined}
                  />
                </div>
              </div>
              <button
                className="gq-btn disabled btn btn-block btn-primary form-action-btn"
                onClick={[Function]}
                tabIndex={2}
                type="button"
              />
              <p
                className="help"
              >
                <a
                  onClick={[Function]}
                  tabIndex="3"
                >
                  <span />
                </a>
              </p>
            </form>
            <div
              className="theme-image"
            />
          </div>
        </div>
      </div>
    </section>
    <footer
      className="site-header"
      id="footer"
    >
      <div
        className="container"
      >
        <div
          id="globalFooterView"
        >
          <ul
            className="nav"
          >
            <li>
              <a
                id="privacyPolicyFooterLink"
                onClick={[Function]}
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "system.general.privacy_policy",
                    }
                  }
                />
              </a>
            </li>
            <li
              className="copyright"
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "system.general.copyright_text",
                  }
                }
              />
            </li>
          </ul>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`renders the dom like the snapshot when the currentForm is activation. 1`] = `
<div>
  <div
    className="page-wrapper"
  >
    <header
      className="site-header"
      id="header"
    >
      <h1
        className="logo"
      >
        <a
          href="homePage.do"
        >
          <img
            alt="login screen primary logo"
            src="assets/skins/undefined/img/logo-primary.png"
          />
        </a>
      </h1>
    </header>
    <section
      id="contents"
    >
      <div
        className="container"
      >
        <div
          className="page-content page"
          id="loginPage"
          style={
            Object {
              "visibility": "visible",
            }
          }
        >
          <div
            className="narrow-form-page login"
          >
            <form
              action={undefined}
              className="narrow-form"
              method="post"
            >
              <p>
                <a
                  onClick={[Function]}
                  tabIndex="3"
                >
                  <span>
                    <i
                      className="icon-arrow-1-circle-left"
                    />
                     
                  </span>
                </a>
              </p>
              <h3 />
              <div
                className="email-field input-wrap focused"
              >
                <label
                  className="control-label"
                  htmlFor="formUserId"
                />
                <input
                  autoFocus={true}
                  className="gq-input"
                  id="formUserId"
                  name="userId"
                  onChange={[Function]}
                  onKeyPress={[Function]}
                  tabIndex="1"
                  type="text"
                  value=""
                />
              </div>
              <button
                className="gq-btn disabled btn btn-block btn-primary form-action-btn"
                onClick={[Function]}
                tabIndex={2}
                type="button"
              />
            </form>
            <div
              className="theme-image"
            />
          </div>
        </div>
      </div>
    </section>
    <footer
      className="site-header"
      id="footer"
    >
      <div
        className="container"
      >
        <div
          id="globalFooterView"
        >
          <ul
            className="nav"
          >
            <li>
              <a
                id="privacyPolicyFooterLink"
                onClick={[Function]}
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "system.general.privacy_policy",
                    }
                  }
                />
              </a>
            </li>
            <li
              className="copyright"
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "system.general.copyright_text",
                  }
                }
              />
            </li>
          </ul>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`renders the dom like the snapshot when the currentForm is codeVerification. 1`] = `
<div>
  <div
    className="page-wrapper"
  >
    <header
      className="site-header"
      id="header"
    >
      <h1
        className="logo"
      >
        <a
          href="homePage.do"
        >
          <img
            alt="login screen primary logo"
            src="assets/skins/undefined/img/logo-primary.png"
          />
        </a>
      </h1>
    </header>
    <section
      id="contents"
    >
      <div
        className="container"
      >
        <div
          className="page-content page"
          id="loginPage"
          style={
            Object {
              "visibility": "visible",
            }
          }
        >
          <div
            className="narrow-form-page login"
          >
            <form
              action={undefined}
              className="narrow-form"
              method={undefined}
            >
              <p>
                <a
                  onClick={[Function]}
                  tabIndex="3"
                >
                  <span>
                    <i
                      className="icon-arrow-1-circle-left"
                    />
                     
                  </span>
                </a>
              </p>
              <h3
                className="no-bottom"
              />
              <span
                className="code-verification-alert"
              />
              <div
                className="input-wrap focused code-verification-input"
              >
                <label
                  className="control-label code-link-label"
                  htmlFor="token"
                />
                <a
                  className="code-link"
                  onClick={[Function]}
                  tabIndex="3"
                >
                  <span
                    className="icon-info"
                  />
                  <span>
                     
                  </span>
                </a>
                <input
                  autoFocus={true}
                  className="gq-input"
                  id="token"
                  name="token"
                  onChange={[Function]}
                  onKeyPress={[Function]}
                  tabIndex="1"
                  type="text"
                  value=""
                />
              </div>
              <button
                className="gq-btn disabled btn btn-block btn-primary form-action-btn"
                onClick={[Function]}
                tabIndex={2}
                type="button"
              />
              <p
                className="help"
              >
                <a
                  onClick={[Function]}
                  tabIndex="3"
                >
                  <span />
                </a>
              </p>
            </form>
            <div
              className="theme-image"
            />
          </div>
        </div>
      </div>
    </section>
    <footer
      className="site-header"
      id="footer"
    >
      <div
        className="container"
      >
        <div
          id="globalFooterView"
        >
          <ul
            className="nav"
          >
            <li>
              <a
                id="privacyPolicyFooterLink"
                onClick={[Function]}
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "system.general.privacy_policy",
                    }
                  }
                />
              </a>
            </li>
            <li
              className="copyright"
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "system.general.copyright_text",
                  }
                }
              />
            </li>
          </ul>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`renders the dom like the snapshot when the currentForm is createPass. 1`] = `
<div>
  <div
    className="page-wrapper"
  >
    <header
      className="site-header"
      id="header"
    >
      <h1
        className="logo"
      >
        <a
          href="homePage.do"
        >
          <img
            alt="login screen primary logo"
            src="assets/skins/undefined/img/logo-primary.png"
          />
        </a>
      </h1>
    </header>
    <section
      id="contents"
    >
      <div
        className="container"
      >
        <div
          className="page-content page"
          id="loginPage"
          style={
            Object {
              "visibility": "visible",
            }
          }
        >
          <div
            className="narrow-form-page login"
          >
            <form
              action={undefined}
              className="narrow-form"
              method={undefined}
            >
              <p>
                <a
                  onClick={[Function]}
                  tabIndex="5"
                >
                  <span>
                    <i
                      className="icon-arrow-1-circle-left"
                    />
                     
                  </span>
                </a>
              </p>
              <h3
                className="no-bottom"
              />
              <p
                className="loginID"
              >
                undefined: bhd-002
              </p>
              <div
                className="password-helper-input"
              >
                <div
                  className="password-input"
                >
                  <div
                    className="input-wrap"
                  >
                    <label
                      className="control-label"
                      htmlFor="password1"
                    />
                    <span
                      className="eye"
                      onClick={[Function]}
                    >
                      <svg
                        className="icon"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,3.9C4.2,3.9,0,9.6,0,12s4.2,8.1,12,8.1s12-5.8,12-8.1S19.8,3.9,12,3.9z M12,18.7c-7.2,0-10.6-5.4-10.6-6.7 S4.8,5.3,12,5.3s10.6,5.4,10.6,6.7S19.2,18.7,12,18.7z"
                        />
                        <path
                          d="M12,7c-2.8,0-5,2.2-5,5s2.2,5,5,5s5-2.2,5-5S14.8,7,12,7z M12,15.6c-2,0-3.6-1.6-3.6-3.6c0-2,1.6-3.6,3.6-3.6 c2,0,3.6,1.6,3.6,3.6C15.6,14,14,15.6,12,15.6z"
                        />
                      </svg>
                    </span>
                    <input
                      autoFocus={true}
                      className="gq-input"
                      disabled={undefined}
                      name="password1"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyPress={[Function]}
                      tabIndex="1"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  className="password-rules-container hide"
                >
                  <div
                    className="rule"
                  >
                    <div
                      className="hide"
                    >
                      <svg
                        className="icon"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,24C5.4,24,0,18.6,0,12S5.4,0,12,0s12,5.4,12,12S18.6,24,12,24z M12,1.5C6.2,1.5,1.5,6.2,1.5,12S6.2,22.5,12,22.5 S22.5,17.8,22.5,12S17.8,1.5,12,1.5z"
                        />
                        <path
                          d="M10.6,16.6c-0.2,0-0.4-0.1-0.5-0.2l-4.4-4.4c-0.3-0.3-0.3-0.8,0-1.1c0.3-0.3,0.8-0.3,1.1,0l3.8,3.8l6.7-7.2 c0.3-0.3,0.8-0.3,1.1,0c0.3,0.3,0.3,0.8,0,1.1l-7.2,7.7C11,16.6,10.8,16.6,10.6,16.6C10.6,16.6,10.6,16.6,10.6,16.6z"
                        />
                      </svg>
                    </div>
                    <div
                      className="hide"
                    >
                      <span>
                        <svg
                          className="icon"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M14.6,8.3l-2.7,2.7L9.3,8.3C9,8,8.5,8,8.2,8.3c-0.3,0.3-0.4,0.8,0,1.1l2.7,2.7l-2.5,2.5C8,15,8,15.5,8.3,15.8 c0.3,0.3,0.8,0.4,1.1,0l2.7-2.7l2.7,2.7c0.3,0.3,0.8,0.4,1.1,0c0.3-0.3,0.4-0.8,0-1.1L13.3,12L16,9.3c0.3-0.3,0.4-0.8,0-1.1 C15.4,8,14.9,8,14.6,8.3z M3.5,3.5c-4.7,4.7-4.7,12.3,0,17s12.3,4.7,17,0s4.7-12.3,0-17S8.2-1.2,3.5,3.5z M19.4,19.4 c-4.1,4.1-10.7,4.1-14.8,0S0.5,8.7,4.6,4.6s10.7-4.1,14.8,0S23.5,15.3,19.4,19.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span>
                      Password is too short. Password should have at least 8 characters.
                    </span>
                  </div>
                  <div
                    className="rule"
                  >
                    <div
                      className="hide"
                    >
                      <svg
                        className="icon"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,24C5.4,24,0,18.6,0,12S5.4,0,12,0s12,5.4,12,12S18.6,24,12,24z M12,1.5C6.2,1.5,1.5,6.2,1.5,12S6.2,22.5,12,22.5 S22.5,17.8,22.5,12S17.8,1.5,12,1.5z"
                        />
                        <path
                          d="M10.6,16.6c-0.2,0-0.4-0.1-0.5-0.2l-4.4-4.4c-0.3-0.3-0.3-0.8,0-1.1c0.3-0.3,0.8-0.3,1.1,0l3.8,3.8l6.7-7.2 c0.3-0.3,0.8-0.3,1.1,0c0.3,0.3,0.3,0.8,0,1.1l-7.2,7.7C11,16.6,10.8,16.6,10.6,16.6C10.6,16.6,10.6,16.6,10.6,16.6z"
                        />
                      </svg>
                    </div>
                    <div
                      className="rule-icon close-circle-icon"
                    >
                      <span>
                        <svg
                          className="icon"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M14.6,8.3l-2.7,2.7L9.3,8.3C9,8,8.5,8,8.2,8.3c-0.3,0.3-0.4,0.8,0,1.1l2.7,2.7l-2.5,2.5C8,15,8,15.5,8.3,15.8 c0.3,0.3,0.8,0.4,1.1,0l2.7-2.7l2.7,2.7c0.3,0.3,0.8,0.4,1.1,0c0.3-0.3,0.4-0.8,0-1.1L13.3,12L16,9.3c0.3-0.3,0.4-0.8,0-1.1 C15.4,8,14.9,8,14.6,8.3z M3.5,3.5c-4.7,4.7-4.7,12.3,0,17s12.3,4.7,17,0s4.7-12.3,0-17S8.2-1.2,3.5,3.5z M19.4,19.4 c-4.1,4.1-10.7,4.1-14.8,0S0.5,8.7,4.6,4.6s10.7-4.1,14.8,0S23.5,15.3,19.4,19.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span />
                  </div>
                  <div
                    className="rule child-label"
                  >
                    <div
                      className="hide"
                    >
                      <svg
                        className="icon"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,24C5.4,24,0,18.6,0,12S5.4,0,12,0s12,5.4,12,12S18.6,24,12,24z M12,1.5C6.2,1.5,1.5,6.2,1.5,12S6.2,22.5,12,22.5 S22.5,17.8,22.5,12S17.8,1.5,12,1.5z"
                        />
                        <path
                          d="M10.6,16.6c-0.2,0-0.4-0.1-0.5-0.2l-4.4-4.4c-0.3-0.3-0.3-0.8,0-1.1c0.3-0.3,0.8-0.3,1.1,0l3.8,3.8l6.7-7.2 c0.3-0.3,0.8-0.3,1.1,0c0.3,0.3,0.3,0.8,0,1.1l-7.2,7.7C11,16.6,10.8,16.6,10.6,16.6C10.6,16.6,10.6,16.6,10.6,16.6z"
                        />
                      </svg>
                    </div>
                    <div
                      className="hide"
                    >
                      <span
                        className="circle"
                      />
                    </div>
                    <span>
                      ???login.forgotpwd.MUST_LOWER_CASE???
                    </span>
                  </div>
                  <div
                    className="rule child-label"
                  >
                    <div
                      className="hide"
                    >
                      <svg
                        className="icon"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,24C5.4,24,0,18.6,0,12S5.4,0,12,0s12,5.4,12,12S18.6,24,12,24z M12,1.5C6.2,1.5,1.5,6.2,1.5,12S6.2,22.5,12,22.5 S22.5,17.8,22.5,12S17.8,1.5,12,1.5z"
                        />
                        <path
                          d="M10.6,16.6c-0.2,0-0.4-0.1-0.5-0.2l-4.4-4.4c-0.3-0.3-0.3-0.8,0-1.1c0.3-0.3,0.8-0.3,1.1,0l3.8,3.8l6.7-7.2 c0.3-0.3,0.8-0.3,1.1,0c0.3,0.3,0.3,0.8,0,1.1l-7.2,7.7C11,16.6,10.8,16.6,10.6,16.6C10.6,16.6,10.6,16.6,10.6,16.6z"
                        />
                      </svg>
                    </div>
                    <div
                      className="hide"
                    >
                      <span
                        className="circle"
                      />
                    </div>
                    <span>
                      ???login.forgotpwd.MUST_NUMBER???
                    </span>
                  </div>
                  <div
                    className="rule child-label"
                  >
                    <div
                      className="hide"
                    >
                      <svg
                        className="icon"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,24C5.4,24,0,18.6,0,12S5.4,0,12,0s12,5.4,12,12S18.6,24,12,24z M12,1.5C6.2,1.5,1.5,6.2,1.5,12S6.2,22.5,12,22.5 S22.5,17.8,22.5,12S17.8,1.5,12,1.5z"
                        />
                        <path
                          d="M10.6,16.6c-0.2,0-0.4-0.1-0.5-0.2l-4.4-4.4c-0.3-0.3-0.3-0.8,0-1.1c0.3-0.3,0.8-0.3,1.1,0l3.8,3.8l6.7-7.2 c0.3-0.3,0.8-0.3,1.1,0c0.3,0.3,0.3,0.8,0,1.1l-7.2,7.7C11,16.6,10.8,16.6,10.6,16.6C10.6,16.6,10.6,16.6,10.6,16.6z"
                        />
                      </svg>
                    </div>
                    <div
                      className="hide"
                    >
                      <span
                        className="circle"
                      />
                    </div>
                    <span>
                      ???login.forgotpwd.MUST_SPECIAL_SYMBOL???
                    </span>
                  </div>
                  <div
                    className="rule child-label"
                  >
                    <div
                      className="hide"
                    >
                      <svg
                        className="icon"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,24C5.4,24,0,18.6,0,12S5.4,0,12,0s12,5.4,12,12S18.6,24,12,24z M12,1.5C6.2,1.5,1.5,6.2,1.5,12S6.2,22.5,12,22.5 S22.5,17.8,22.5,12S17.8,1.5,12,1.5z"
                        />
                        <path
                          d="M10.6,16.6c-0.2,0-0.4-0.1-0.5-0.2l-4.4-4.4c-0.3-0.3-0.3-0.8,0-1.1c0.3-0.3,0.8-0.3,1.1,0l3.8,3.8l6.7-7.2 c0.3-0.3,0.8-0.3,1.1,0c0.3,0.3,0.3,0.8,0,1.1l-7.2,7.7C11,16.6,10.8,16.6,10.6,16.6C10.6,16.6,10.6,16.6,10.6,16.6z"
                        />
                      </svg>
                    </div>
                    <div
                      className="hide"
                    >
                      <span
                        className="circle"
                      />
                    </div>
                    <span>
                      ???login.forgotpwd.MUST_UPPER_CASE???
                    </span>
                  </div>
                </div>
              </div>
              <button
                className="gq-btn disabled btn btn-block btn-primary form-action-btn"
                onClick={[Function]}
                tabIndex={3}
                type="button"
              />
              <p
                className="help"
              >
                <a
                  onClick={[Function]}
                  tabIndex="3"
                >
                  <span />
                </a>
              </p>
            </form>
            <div
              className="theme-image"
            />
          </div>
        </div>
      </div>
    </section>
    <footer
      className="site-header"
      id="footer"
    >
      <div
        className="container"
      >
        <div
          id="globalFooterView"
        >
          <ul
            className="nav"
          >
            <li>
              <a
                id="privacyPolicyFooterLink"
                onClick={[Function]}
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "system.general.privacy_policy",
                    }
                  }
                />
              </a>
            </li>
            <li
              className="copyright"
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "system.general.copyright_text",
                  }
                }
              />
            </li>
          </ul>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`renders the dom like the snapshot when the currentForm is forgotPassword. 1`] = `
<div>
  <div
    className="page-wrapper"
  >
    <header
      className="site-header"
      id="header"
    >
      <h1
        className="logo"
      >
        <a
          href="homePage.do"
        >
          <img
            alt="login screen primary logo"
            src="assets/skins/undefined/img/logo-primary.png"
          />
        </a>
      </h1>
    </header>
    <section
      id="contents"
    >
      <div
        className="container"
      >
        <div
          className="page-content page"
          id="loginPage"
          style={
            Object {
              "visibility": "visible",
            }
          }
        >
          <div
            className="narrow-form-page login"
          >
            <form
              action={undefined}
              className="narrow-form"
              method={undefined}
            >
              <p>
                <a
                  onClick={[Function]}
                  tabIndex="5"
                >
                  <span>
                    <i
                      className="icon-arrow-1-circle-left"
                    />
                     
                  </span>
                </a>
              </p>
              <h3 />
              <div
                className="username-field input-wrap focused"
              >
                <label
                  className="control-label"
                  htmlFor="formUserId"
                />
                <input
                  autoFocus={true}
                  className="gq-input"
                  id="formUserId"
                  name="username"
                  onChange={[Function]}
                  onKeyPress={[Function]}
                  tabIndex={1}
                  type="text"
                  value=""
                />
                <div
                  className="validation-error"
                >
                  <span
                    className="text"
                  >
                    
                  </span>
                </div>
              </div>
              <button
                className="gq-btn disabled btn btn-block btn-primary form-action-btn"
                onClick={[Function]}
                tabIndex={3}
                type="button"
              />
            </form>
            <div
              className="theme-image"
            />
          </div>
        </div>
      </div>
    </section>
    <footer
      className="site-header"
      id="footer"
    >
      <div
        className="container"
      >
        <div
          id="globalFooterView"
        >
          <ul
            className="nav"
          >
            <li>
              <a
                id="privacyPolicyFooterLink"
                onClick={[Function]}
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "system.general.privacy_policy",
                    }
                  }
                />
              </a>
            </li>
            <li
              className="copyright"
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "system.general.copyright_text",
                  }
                }
              />
            </li>
          </ul>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`renders the dom like the snapshot when the currentForm is forgotUserId. 1`] = `
<div>
  <div
    className="page-wrapper"
  >
    <header
      className="site-header"
      id="header"
    >
      <h1
        className="logo"
      >
        <a
          href="homePage.do"
        >
          <img
            alt="login screen primary logo"
            src="assets/skins/undefined/img/logo-primary.png"
          />
        </a>
      </h1>
    </header>
    <section
      id="contents"
    >
      <div
        className="container"
      >
        <div
          className="page-content page"
          id="loginPage"
          style={
            Object {
              "visibility": "visible",
            }
          }
        >
          <div
            className="narrow-form-page login"
          >
            <form
              action={undefined}
              className="narrow-form"
              method="post"
            >
              <p>
                <a
                  onClick={[Function]}
                  tabIndex="4"
                >
                  <span>
                    <i
                      className="icon-arrow-1-circle-left"
                    />
                     
                  </span>
                </a>
              </p>
              <h3 />
              <p
                className="userIdHint"
              />
              <div
                className="email-field input-wrap focused"
              >
                <label
                  className="control-label"
                  htmlFor="formUserId"
                />
                <input
                  autoFocus={true}
                  className="gq-input"
                  id="formUserId"
                  name="emailOrPhone"
                  onBlur={undefined}
                  onChange={[Function]}
                  onFocus={undefined}
                  onKeyPress={[Function]}
                  tabIndex="1"
                  type="text"
                  value=""
                />
              </div>
              <button
                className="gq-btn disabled btn btn-block btn-primary form-action-btn"
                onClick={[Function]}
                tabIndex={2}
                type="button"
              />
            </form>
            <div
              className="theme-image"
            />
          </div>
        </div>
      </div>
    </section>
    <footer
      className="site-header"
      id="footer"
    >
      <div
        className="container"
      >
        <div
          id="globalFooterView"
        >
          <ul
            className="nav"
          >
            <li>
              <a
                id="privacyPolicyFooterLink"
                onClick={[Function]}
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "system.general.privacy_policy",
                    }
                  }
                />
              </a>
            </li>
            <li
              className="copyright"
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "system.general.copyright_text",
                  }
                }
              />
            </li>
          </ul>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`renders the dom like the snapshot when the currentForm is login. 1`] = `
<div>
  <div
    className="page-wrapper"
  >
    <header
      className="site-header"
      id="header"
    >
      <h1
        className="logo"
      >
        <a
          href="homePage.do"
        >
          <img
            alt="login screen primary logo"
            src="assets/skins/undefined/img/logo-primary.png"
          />
        </a>
      </h1>
    </header>
    <section
      id="contents"
    >
      <div
        className="container"
      >
        <div
          className="page-content page"
          id="loginPage"
          style={
            Object {
              "visibility": "visible",
            }
          }
        >
          <div
            className="narrow-form-page login"
          >
            <form
              action={undefined}
              className="narrow-form"
              method="post"
            >
              <div
                className="row-fluid"
              >
                <h2 />
                <p />
                <div
                  className="hide language-select input-wrap"
                >
                  <label
                    className="control-label"
                    htmlFor="languageSelect"
                  />
                  <select
                    className="selectpicker gq-input"
                    id="language-select"
                    onChange={[Function]}
                    value="en_US"
                  />
                </div>
                <div
                  className="username-field login-form input-wrap focused"
                >
                  <a
                    className="forgot-link login-input-label"
                    onClick={[Function]}
                    tabIndex="5"
                  >
                    <span>
                      login.password.reset.forgot_login_id
                    </span>
                  </a>
                  <label
                    className="control-label"
                    htmlFor="formUserId"
                  >
                    <span>
                      login.loginpage.username
                    </span>
                  </label>
                  <span
                    className="userId"
                  >
                    <span
                      className="icon-info"
                    />
                    <span
                      className="instructions"
                    />
                  </span>
                  <input
                    autoFocus={true}
                    className="gq-input"
                    id="formUserId"
                    name="username"
                    onChange={[Function]}
                    onKeyPress={[Function]}
                    tabIndex="1"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="password-field input-wrap focused"
                >
                  <a
                    className="forgot-link login-input-label"
                    onClick={[Function]}
                    tabIndex="5"
                  >
                    <span>
                      login.loginpage.forgot_password
                    </span>
                  </a>
                  <label
                    className="control-label"
                    htmlFor="formPassword"
                  >
                    <span>
                      login.loginpage.password
                    </span>
                  </label>
                  <span
                    className="eye"
                    onClick={[Function]}
                  >
                    <svg
                      className="icon"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M20.6,6.8l-0.9,1.1c1.9,1.5,2.9,3.6,2.9,4.1c0,1.3-3.4,6.7-10.6,6.7c-1.1,0-2.5-0.2-3.4-0.4l-0.3,1.4 c0.9,0.2,2.5,0.4,3.6,0.4c7.8,0,12-5.8,12-8.1C24,10.8,22.6,8.4,20.6,6.8z"
                      />
                      <path
                        d="M21.6,1.4L18,5c-1.4-0.8-4-1.1-6-1.1C4.2,3.9,0,9.6,0,12c0,1.2,1.6,4.3,4.6,6.4l-3.3,3.3l1,1L22.6,2.4L21.6,1.4z M1.4,12 c0-1.3,3.4-6.7,10.6-6.7c1.6,0,3.7,0.3,4.9,0.8L15,8c-0.9-0.6-1.9-1-3-1c-2.8,0-5,2.2-5,5c0,1.1,0.4,2.1,1,3l-2.3,2.3 C2.7,15.5,1.4,12.6,1.4,12z M8.4,12c0-2,1.6-3.6,3.6-3.6c0.7,0,1.4,0.2,2,0.6l-5,5C8.6,13.4,8.4,12.7,8.4,12z"
                      />
                      <path
                        d="M12,15.6c-0.2,0-0.3,0-0.5,0l-0.2,1.4c0.2,0,0.4,0,0.7,0c2.8,0,5-2.2,5-5c0-0.2,0-0.4,0-0.7l-1.4,0.2c0,0.2,0,0.3,0,0.5 C15.6,14,14,15.6,12,15.6z"
                      />
                    </svg>
                  </span>
                  <input
                    className="gq-input"
                    id="formPassword"
                    name="password"
                    onChange={[Function]}
                    onKeyPress={[Function]}
                    tabIndex="2"
                    type="password"
                    value=""
                  />
                </div>
                <div
                  className="activation"
                >
                  <p>
                     
                    <a
                      onClick={[Function]}
                    />
                  </p>
                </div>
                <button
                  className="gq-btn disabled btn btn-block btn-primary form-action-btn"
                  onClick={[Function]}
                  tabIndex={3}
                  type="button"
                >
                  <span>
                    login.loginpage.log_in
                  </span>
                </button>
              </div>
            </form>
            <div
              className="theme-image"
            />
          </div>
        </div>
      </div>
    </section>
    <footer
      className="site-header"
      id="footer"
    >
      <div
        className="container"
      >
        <div
          id="globalFooterView"
        >
          <ul
            className="nav"
          >
            <li>
              <a
                id="privacyPolicyFooterLink"
                onClick={[Function]}
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "system.general.privacy_policy",
                    }
                  }
                />
              </a>
            </li>
            <li
              className="copyright"
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "system.general.copyright_text",
                  }
                }
              />
            </li>
          </ul>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`renders the dom like the snapshot when the currentForm is messageWindow. 1`] = `
<div>
  <div
    className="page-wrapper"
  >
    <header
      className="site-header"
      id="header"
    >
      <h1
        className="logo"
      >
        <a
          href="homePage.do"
        >
          <img
            alt="login screen primary logo"
            src="assets/skins/undefined/img/logo-primary.png"
          />
        </a>
      </h1>
    </header>
    <section
      id="contents"
    >
      <div
        className="container"
      >
        <div
          className="page-content page"
          id="loginPage"
          style={
            Object {
              "visibility": "visible",
            }
          }
        >
          <div
            className="narrow-form-page login"
          >
            <form
              action={undefined}
              className="narrow-form"
              method={undefined}
            >
              <p>
                <a
                  onClick={[Function]}
                  tabIndex="5"
                >
                  <span>
                    <i
                      className="icon-arrow-1-circle-left"
                    />
                     
                  </span>
                </a>
              </p>
              <h3
                className="no-bottom no-alert-bottom"
              />
              <p
                className="help"
              >
                <a
                  onClick={[Function]}
                  tabIndex="3"
                >
                  <span />
                </a>
              </p>
            </form>
            <div
              className="theme-image"
            />
          </div>
        </div>
      </div>
    </section>
    <footer
      className="site-header"
      id="footer"
    >
      <div
        className="container"
      >
        <div
          id="globalFooterView"
        >
          <ul
            className="nav"
          >
            <li>
              <a
                id="privacyPolicyFooterLink"
                onClick={[Function]}
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "system.general.privacy_policy",
                    }
                  }
                />
              </a>
            </li>
            <li
              className="copyright"
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "system.general.copyright_text",
                  }
                }
              />
            </li>
          </ul>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`renders the dom like the snapshot when the currentForm is methodOfContact. 1`] = `
<div>
  <div
    className="page-wrapper"
  >
    <header
      className="site-header"
      id="header"
    >
      <h1
        className="logo"
      >
        <a
          href="homePage.do"
        >
          <img
            alt="login screen primary logo"
            src="assets/skins/undefined/img/logo-primary.png"
          />
        </a>
      </h1>
    </header>
    <section
      id="contents"
    >
      <div
        className="container"
      >
        <div
          className="page-content page"
          id="loginPage"
          style={
            Object {
              "visibility": "visible",
            }
          }
        >
          <div
            className="narrow-form-page login"
          >
            <form
              action={undefined}
              className="narrow-form"
              method={undefined}
            >
              <p>
                <a
                  onClick={[Function]}
                  tabIndex="5"
                >
                  <span>
                    <i
                      className="icon-arrow-1-circle-left"
                    />
                     
                  </span>
                </a>
              </p>
              <h3
                className="no-bottom"
              />
              <div
                className="radio-wrapper overflow"
              >
                <div
                  className="radio"
                >
                  <label>
                    <input
                      checked={false}
                      data-contact-type="EMAIL"
                      data-shared={false}
                      name="radio"
                      onChange={[Function]}
                      type="radio"
                      value="12"
                    />
                    <span
                      className="icon-email"
                    />
                    
                    <span
                      className="emailMOC"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "tom***r&#8203;@gmail.com",
                        }
                      }
                    />
                  </label>
                </div>
                <div
                  className="radio"
                >
                  <label>
                    <input
                      checked={false}
                      data-contact-type="PHONE"
                      data-shared={false}
                      name="radio"
                      onChange={[Function]}
                      type="radio"
                      value="13"
                    />
                    <span
                      className="icon-smartphone"
                    />
                    
                    <span
                      className="emailMOC"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "6*******71",
                        }
                      }
                    />
                  </label>
                </div>
              </div>
              <button
                className="gq-btn disabled btn btn-block btn-primary form-action-btn"
                onClick={[Function]}
                tabIndex={3}
                type="button"
              />
              <p
                className="help"
              >
                <a
                  onClick={[Function]}
                  tabIndex="3"
                >
                  <span />
                </a>
              </p>
            </form>
            <div
              className="theme-image"
            />
          </div>
        </div>
      </div>
    </section>
    <footer
      className="site-header"
      id="footer"
    >
      <div
        className="container"
      >
        <div
          id="globalFooterView"
        >
          <ul
            className="nav"
          >
            <li>
              <a
                id="privacyPolicyFooterLink"
                onClick={[Function]}
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "system.general.privacy_policy",
                    }
                  }
                />
              </a>
            </li>
            <li
              className="copyright"
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "system.general.copyright_text",
                  }
                }
              />
            </li>
          </ul>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`renders the dom like the snapshot when the currentForm is recovery. 1`] = `
<div>
  <div
    className="page-wrapper"
  >
    <header
      className="site-header"
      id="header"
    >
      <h1
        className="logo"
      >
        <a
          href="homePage.do"
        >
          <img
            alt="login screen primary logo"
            src="assets/skins/undefined/img/logo-primary.png"
          />
        </a>
      </h1>
    </header>
    <section
      id="contents"
    >
      <div
        className="container"
      >
        <div
          className="page-content page"
          id="loginPage"
          style={
            Object {
              "visibility": "visible",
            }
          }
        >
          <div
            className="narrow-form-page login"
          >
            <form
              action={undefined}
              className="narrow-form"
              method={undefined}
            >
              <p>
                <a
                  onClick={[Function]}
                  tabIndex="5"
                >
                  <span>
                    <i
                      className="icon-arrow-1-circle-left"
                    />
                     
                  </span>
                </a>
              </p>
              <h3
                className="no-bottom no-alert-bottom"
              />
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": undefined,
                  }
                }
              />
              <p
                className="help"
              >
                <a
                  onClick={[Function]}
                  tabIndex="3"
                >
                  <span />
                </a>
              </p>
            </form>
            <div
              className="theme-image"
            />
          </div>
        </div>
      </div>
    </section>
    <footer
      className="site-header"
      id="footer"
    >
      <div
        className="container"
      >
        <div
          id="globalFooterView"
        >
          <ul
            className="nav"
          >
            <li>
              <a
                id="privacyPolicyFooterLink"
                onClick={[Function]}
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "system.general.privacy_policy",
                    }
                  }
                />
              </a>
            </li>
            <li
              className="copyright"
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "system.general.copyright_text",
                  }
                }
              />
            </li>
          </ul>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`renders the dom like the snapshot when the currentForm is resetPassword. 1`] = `
<div>
  <div
    className="page-wrapper"
  >
    <header
      className="site-header"
      id="header"
    >
      <h1
        className="logo"
      >
        <a
          href="homePage.do"
        >
          <img
            alt="login screen primary logo"
            src="assets/skins/undefined/img/logo-primary.png"
          />
        </a>
      </h1>
    </header>
    <section
      id="contents"
    >
      <div
        className="container"
      >
        <div
          className="page-content page"
          id="loginPage"
          style={
            Object {
              "visibility": "visible",
            }
          }
        >
          <div
            className="narrow-form-page login"
          >
            <form
              action={undefined}
              className="narrow-form"
              method={undefined}
            >
              <p>
                <a
                  onClick={[Function]}
                  tabIndex="5"
                >
                  <span>
                    <i
                      className="icon-arrow-1-circle-left"
                    />
                     
                  </span>
                </a>
              </p>
              <h3
                className="no-bottom"
              />
              <div>
                <p
                  className="enter-user-text"
                />
                <div
                  className="username-field input-wrap focused"
                >
                  <label
                    className="control-label"
                    htmlFor="formUserId"
                  />
                  <input
                    autoFocus={true}
                    className="gq-input"
                    id="formUserId"
                    name="username"
                    onChange={[Function]}
                    onKeyPress={[Function]}
                    tabIndex={1}
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                className="password-helper-input"
              >
                <div
                  className="password-input"
                >
                  <div
                    className="input-wrap"
                  >
                    <label
                      className="control-label"
                      htmlFor="password1"
                    />
                    <span
                      className="eye"
                      onClick={[Function]}
                    >
                      <svg
                        className="icon"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,3.9C4.2,3.9,0,9.6,0,12s4.2,8.1,12,8.1s12-5.8,12-8.1S19.8,3.9,12,3.9z M12,18.7c-7.2,0-10.6-5.4-10.6-6.7 S4.8,5.3,12,5.3s10.6,5.4,10.6,6.7S19.2,18.7,12,18.7z"
                        />
                        <path
                          d="M12,7c-2.8,0-5,2.2-5,5s2.2,5,5,5s5-2.2,5-5S14.8,7,12,7z M12,15.6c-2,0-3.6-1.6-3.6-3.6c0-2,1.6-3.6,3.6-3.6 c2,0,3.6,1.6,3.6,3.6C15.6,14,14,15.6,12,15.6z"
                        />
                      </svg>
                    </span>
                    <input
                      autoFocus={false}
                      className="gq-input"
                      disabled={undefined}
                      name="password1"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyPress={[Function]}
                      tabIndex="2"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  className="password-rules-container hide"
                >
                  <div
                    className="rule"
                  >
                    <div
                      className="hide"
                    >
                      <svg
                        className="icon"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,24C5.4,24,0,18.6,0,12S5.4,0,12,0s12,5.4,12,12S18.6,24,12,24z M12,1.5C6.2,1.5,1.5,6.2,1.5,12S6.2,22.5,12,22.5 S22.5,17.8,22.5,12S17.8,1.5,12,1.5z"
                        />
                        <path
                          d="M10.6,16.6c-0.2,0-0.4-0.1-0.5-0.2l-4.4-4.4c-0.3-0.3-0.3-0.8,0-1.1c0.3-0.3,0.8-0.3,1.1,0l3.8,3.8l6.7-7.2 c0.3-0.3,0.8-0.3,1.1,0c0.3,0.3,0.3,0.8,0,1.1l-7.2,7.7C11,16.6,10.8,16.6,10.6,16.6C10.6,16.6,10.6,16.6,10.6,16.6z"
                        />
                      </svg>
                    </div>
                    <div
                      className="hide"
                    >
                      <span>
                        <svg
                          className="icon"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M14.6,8.3l-2.7,2.7L9.3,8.3C9,8,8.5,8,8.2,8.3c-0.3,0.3-0.4,0.8,0,1.1l2.7,2.7l-2.5,2.5C8,15,8,15.5,8.3,15.8 c0.3,0.3,0.8,0.4,1.1,0l2.7-2.7l2.7,2.7c0.3,0.3,0.8,0.4,1.1,0c0.3-0.3,0.4-0.8,0-1.1L13.3,12L16,9.3c0.3-0.3,0.4-0.8,0-1.1 C15.4,8,14.9,8,14.6,8.3z M3.5,3.5c-4.7,4.7-4.7,12.3,0,17s12.3,4.7,17,0s4.7-12.3,0-17S8.2-1.2,3.5,3.5z M19.4,19.4 c-4.1,4.1-10.7,4.1-14.8,0S0.5,8.7,4.6,4.6s10.7-4.1,14.8,0S23.5,15.3,19.4,19.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span>
                      Password is too short. Password should have at least 8 characters.
                    </span>
                  </div>
                  <div
                    className="rule"
                  >
                    <div
                      className="hide"
                    >
                      <svg
                        className="icon"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,24C5.4,24,0,18.6,0,12S5.4,0,12,0s12,5.4,12,12S18.6,24,12,24z M12,1.5C6.2,1.5,1.5,6.2,1.5,12S6.2,22.5,12,22.5 S22.5,17.8,22.5,12S17.8,1.5,12,1.5z"
                        />
                        <path
                          d="M10.6,16.6c-0.2,0-0.4-0.1-0.5-0.2l-4.4-4.4c-0.3-0.3-0.3-0.8,0-1.1c0.3-0.3,0.8-0.3,1.1,0l3.8,3.8l6.7-7.2 c0.3-0.3,0.8-0.3,1.1,0c0.3,0.3,0.3,0.8,0,1.1l-7.2,7.7C11,16.6,10.8,16.6,10.6,16.6C10.6,16.6,10.6,16.6,10.6,16.6z"
                        />
                      </svg>
                    </div>
                    <div
                      className="rule-icon close-circle-icon"
                    >
                      <span>
                        <svg
                          className="icon"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M14.6,8.3l-2.7,2.7L9.3,8.3C9,8,8.5,8,8.2,8.3c-0.3,0.3-0.4,0.8,0,1.1l2.7,2.7l-2.5,2.5C8,15,8,15.5,8.3,15.8 c0.3,0.3,0.8,0.4,1.1,0l2.7-2.7l2.7,2.7c0.3,0.3,0.8,0.4,1.1,0c0.3-0.3,0.4-0.8,0-1.1L13.3,12L16,9.3c0.3-0.3,0.4-0.8,0-1.1 C15.4,8,14.9,8,14.6,8.3z M3.5,3.5c-4.7,4.7-4.7,12.3,0,17s12.3,4.7,17,0s4.7-12.3,0-17S8.2-1.2,3.5,3.5z M19.4,19.4 c-4.1,4.1-10.7,4.1-14.8,0S0.5,8.7,4.6,4.6s10.7-4.1,14.8,0S23.5,15.3,19.4,19.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span />
                  </div>
                  <div
                    className="rule child-label"
                  >
                    <div
                      className="hide"
                    >
                      <svg
                        className="icon"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,24C5.4,24,0,18.6,0,12S5.4,0,12,0s12,5.4,12,12S18.6,24,12,24z M12,1.5C6.2,1.5,1.5,6.2,1.5,12S6.2,22.5,12,22.5 S22.5,17.8,22.5,12S17.8,1.5,12,1.5z"
                        />
                        <path
                          d="M10.6,16.6c-0.2,0-0.4-0.1-0.5-0.2l-4.4-4.4c-0.3-0.3-0.3-0.8,0-1.1c0.3-0.3,0.8-0.3,1.1,0l3.8,3.8l6.7-7.2 c0.3-0.3,0.8-0.3,1.1,0c0.3,0.3,0.3,0.8,0,1.1l-7.2,7.7C11,16.6,10.8,16.6,10.6,16.6C10.6,16.6,10.6,16.6,10.6,16.6z"
                        />
                      </svg>
                    </div>
                    <div
                      className="hide"
                    >
                      <span
                        className="circle"
                      />
                    </div>
                    <span>
                      ???login.forgotpwd.MUST_LOWER_CASE???
                    </span>
                  </div>
                  <div
                    className="rule child-label"
                  >
                    <div
                      className="hide"
                    >
                      <svg
                        className="icon"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,24C5.4,24,0,18.6,0,12S5.4,0,12,0s12,5.4,12,12S18.6,24,12,24z M12,1.5C6.2,1.5,1.5,6.2,1.5,12S6.2,22.5,12,22.5 S22.5,17.8,22.5,12S17.8,1.5,12,1.5z"
                        />
                        <path
                          d="M10.6,16.6c-0.2,0-0.4-0.1-0.5-0.2l-4.4-4.4c-0.3-0.3-0.3-0.8,0-1.1c0.3-0.3,0.8-0.3,1.1,0l3.8,3.8l6.7-7.2 c0.3-0.3,0.8-0.3,1.1,0c0.3,0.3,0.3,0.8,0,1.1l-7.2,7.7C11,16.6,10.8,16.6,10.6,16.6C10.6,16.6,10.6,16.6,10.6,16.6z"
                        />
                      </svg>
                    </div>
                    <div
                      className="hide"
                    >
                      <span
                        className="circle"
                      />
                    </div>
                    <span>
                      ???login.forgotpwd.MUST_NUMBER???
                    </span>
                  </div>
                  <div
                    className="rule child-label"
                  >
                    <div
                      className="hide"
                    >
                      <svg
                        className="icon"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,24C5.4,24,0,18.6,0,12S5.4,0,12,0s12,5.4,12,12S18.6,24,12,24z M12,1.5C6.2,1.5,1.5,6.2,1.5,12S6.2,22.5,12,22.5 S22.5,17.8,22.5,12S17.8,1.5,12,1.5z"
                        />
                        <path
                          d="M10.6,16.6c-0.2,0-0.4-0.1-0.5-0.2l-4.4-4.4c-0.3-0.3-0.3-0.8,0-1.1c0.3-0.3,0.8-0.3,1.1,0l3.8,3.8l6.7-7.2 c0.3-0.3,0.8-0.3,1.1,0c0.3,0.3,0.3,0.8,0,1.1l-7.2,7.7C11,16.6,10.8,16.6,10.6,16.6C10.6,16.6,10.6,16.6,10.6,16.6z"
                        />
                      </svg>
                    </div>
                    <div
                      className="hide"
                    >
                      <span
                        className="circle"
                      />
                    </div>
                    <span>
                      ???login.forgotpwd.MUST_SPECIAL_SYMBOL???
                    </span>
                  </div>
                  <div
                    className="rule child-label"
                  >
                    <div
                      className="hide"
                    >
                      <svg
                        className="icon"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,24C5.4,24,0,18.6,0,12S5.4,0,12,0s12,5.4,12,12S18.6,24,12,24z M12,1.5C6.2,1.5,1.5,6.2,1.5,12S6.2,22.5,12,22.5 S22.5,17.8,22.5,12S17.8,1.5,12,1.5z"
                        />
                        <path
                          d="M10.6,16.6c-0.2,0-0.4-0.1-0.5-0.2l-4.4-4.4c-0.3-0.3-0.3-0.8,0-1.1c0.3-0.3,0.8-0.3,1.1,0l3.8,3.8l6.7-7.2 c0.3-0.3,0.8-0.3,1.1,0c0.3,0.3,0.3,0.8,0,1.1l-7.2,7.7C11,16.6,10.8,16.6,10.6,16.6C10.6,16.6,10.6,16.6,10.6,16.6z"
                        />
                      </svg>
                    </div>
                    <div
                      className="hide"
                    >
                      <span
                        className="circle"
                      />
                    </div>
                    <span>
                      ???login.forgotpwd.MUST_UPPER_CASE???
                    </span>
                  </div>
                </div>
              </div>
              <button
                className="gq-btn disabled btn btn-block btn-primary form-action-btn"
                onClick={[Function]}
                tabIndex={3}
                type="button"
              />
              <p
                className="help"
              >
                <a
                  onClick={[Function]}
                  tabIndex="3"
                >
                  <span />
                </a>
              </p>
            </form>
            <div
              className="theme-image"
            />
          </div>
        </div>
      </div>
    </section>
    <footer
      className="site-header"
      id="footer"
    >
      <div
        className="container"
      >
        <div
          id="globalFooterView"
        >
          <ul
            className="nav"
          >
            <li>
              <a
                id="privacyPolicyFooterLink"
                onClick={[Function]}
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "system.general.privacy_policy",
                    }
                  }
                />
              </a>
            </li>
            <li
              className="copyright"
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "system.general.copyright_text",
                  }
                }
              />
            </li>
          </ul>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`renders the dom like the snapshot when the props have default values. 1`] = `
<div>
  <div
    className="page-wrapper"
  >
    <header
      className="site-header"
      id="header"
    >
      <h1
        className="logo"
      >
        <a
          href="homePage.do"
        >
          <img
            alt="login screen primary logo"
            src="assets/skins/undefined/img/logo-primary.png"
          />
        </a>
      </h1>
    </header>
    <section
      id="contents"
    >
      <div
        className="container"
      >
        <div
          className="page-content page"
          id="loginPage"
          style={
            Object {
              "visibility": "visible",
            }
          }
        />
      </div>
      <div
        className="spincover pageLoading"
        id="pageLoadingSpinner"
      >
        <img
          alt="Loading..."
          src="assets/img/pageLoadingSpinner.gif"
        />
      </div>
      <div
        className="modal-wrapper"
      >
        <div
          className="modal-backdrop fade in"
        />
        <div
          className="modal"
          id="Modal"
        >
          <div
            className="modal-header"
            id="ModalHeader"
          >
            <h3 />
            <button
              className="close"
              data-dismiss="modal"
              onClick={[Function]}
              type="button"
            >
              <i
                className="icon-close"
              />
            </button>
          </div>
          <div
            className="modal-body"
            id="ModalBody"
          >
            <div
              className="alert-panel"
              role="alert-panel"
            >
              <p
                dangerouslySetInnerHTML={
                  Object {
                    "__html": undefined,
                  }
                }
              />
              <p
                dangerouslySetInnerHTML={
                  Object {
                    "__html": undefined,
                  }
                }
              />
            </div>
          </div>
          <div
            className="modal-footer"
            id="ModalFooter"
          >
            <a
              className="btn btn-block btn-primary"
              onClick={[Function]}
            />
          </div>
        </div>
      </div>
    </section>
    <footer
      className="site-header"
      id="footer"
    >
      <div
        className="container"
      >
        <div
          id="globalFooterView"
        >
          <ul
            className="nav"
          >
            <li>
              <a
                id="privacyPolicyFooterLink"
                onClick={[Function]}
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "system.general.privacy_policy",
                    }
                  }
                />
              </a>
            </li>
            <li
              className="copyright"
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "system.general.copyright_text",
                  }
                }
              />
            </li>
          </ul>
        </div>
      </div>
    </footer>
  </div>
</div>
`;
